--- a/my-react-router-app/package.json
+++ b/my-react-router-app/package.json
@@ -8,6 +8,9 @@
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
+  "engines": {
+     "node": ">=20.0.0"
+  },
   "dependencies": {
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
